# ev3dev2simulator

./: .gitignore  .pylintrc  CHANGELOG.md  DISTRIBUTE.txt  LICENSE.txt  README.md  bluetooth.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bash_on_windows  bash_on_windows.yml  cmd_on_windows.yml  pythonpackage.yml  test_binary_install.yml
.mypy_cache/3.8/: ColorObstacle.data.json  ColorObstacle.meta.json  DeviceConnector.data.json  DeviceConnector.meta.json  Led.data.json  Led.meta.json  LedConnector.data.json  LedConnector.meta.json  MainLarge.data.json  MainLarge.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _compression.data.json  _compression.meta.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  _types.data.json  _types.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.meta.json  _weakrefset.meta.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  base64.data.json  base64.meta.json  bluetooth.data.json  bluetooth.meta.json  builtins.data.json  builtins.meta.json  (+76 more)
__DEVELOPER_NOTES__/202405_fixing_ev3dev2simulator_to_work_again_and_also_with_new_python3.12/: __README__202405_fixing_ev3dev2simulator_to_work_again_and_also_with_new_python3.12.txt  pyttsx3.txt  simpleaudio.txt
__TODO__/: __TODO__refactor_ev3dev2simulator.txt  __TODO_fix_thonny4_with_ev3dev_with_easy_installation_for_kids.txt
config/: config.yaml
ev3dev2/: __init__.py  button.py  console.py  display.py  led.py  motor.py  port.py  power.py  sound.py  stopwatch.py  unit.py  wheel.py
ev3dev2/fonts/: __init__.py
ev3dev2/sensor/: __init__.py  lego.py
ev3dev2simulator/: Simulator.py  Visualiser.py  __main__.py  simulator.py  version.py
ev3dev2simulator/config/: ConfigChecker.py  config.py  config_checker.py  config_large.yaml  config_large2.yaml  config_small.yaml  config_small_2bot.yaml  simulation_settings.yaml  visualisation.yaml
ev3dev2simulator/connection/: BrickServerSocket.py  ClientSocket.py  ClientSocketHandler.py  MessageHandler.py  MessageProcessor.py  MotorCommandProcessor.py  ServerSocketDouble.py  (+6 more)
examples/: DemoRover.py  DemoRoverBasic.py  DemoRoverSimple.py  DriveRectangle.py  getVersions.py
scripts/: create_package.py  setup_python_venv.bash
source/: Main.py  Main2.py  Simulator.py  UserThread.py  bluetooth.py
src/: bluetooth.py
testprograms/: BluetoothHelper.py  ListenerThread.py  Main.py  Main2.py  Main3.py  MainLarge.bash  MainLarge.py  MainLarge_slave.py  MasterBrick.py  MasterSLaveBrick.bash  SlaveBrick.py  bump.py  bump_large.py  determine_port.py  edge_test.py  simulator_demo_website.py  sound_main.py  test.py
(+712 files in other folders)
